--- a/package.json
+++ b/package.json
@@ -52,9 +52,9 @@
     "@types/node": "^20.0.0",
     "dotenv": "^17.2.3",
     "jest": "^29.5.0",
+    "release-it": "^19.0.6",
     "ts-jest": "^29.1.0",
-    "typescript": "^5.0.0",
-    "release-it": "19.0.6"
+    "typescript": "^5.0.0"
   },
   "dependencies": {
     "appwrite": ">=13.0.0"
