--- a/appwrite-orm/package.json
+++ b/appwrite-orm/package.json
@@ -6,12 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "db:setup": "tsx setup.ts",
+    "db:list": "tsx list-requests.ts",
+    "db:approve": "tsx approve-project.ts"
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
-    "appwrite-orm": "^0.3.0",
+    "appwrite-orm": "^0.3.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
     "next": "16.0.3",
@@ -26,7 +30,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
+    "node-appwrite": "^20.3.0",
     "tailwindcss": "^4",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   }
 }
