--- a/appwrite-orm/package.json
+++ b/appwrite-orm/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
+    "appwrite": "^21.4.0",
     "appwrite-orm": "^0.3.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
